--- a/devops-asp-dot-net-core-app-starter/Pages/Index.cshtml
+++ b/devops-asp-dot-net-core-app-starter/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome Atin Gupta to Azure-new release</h1>
+    <h1 class="display-4">Welcome Vinita to Azure-new release hello</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Release 5</a>.</p>
 </div>
